your commit message here

--- a/index.html
+++ b/index.html
@@ -320,6 +320,20 @@
         </div>
     </div>
 
+    <div class="laptop_image_padding mobile_margin_below">
+        <a href="https://shwetasingh777.github.io/ParishkaWebsite/Ludo.html" target="_blank">
+            <picture>
+                <!-- Mobile first -->
+                <source srcset="Images/Home_Page/MOBILE_07.png" media="(max-width: 767px)">
+                <!-- Desktop -->
+                <source srcset="Images/Home_Page/DESKTOP_07.png" media="(min-width: 768px)">
+
+                <!-- Fallback -->
+                <img src="Images/Home_Page/DESKTOP_04.png" alt="Responsive banner" class="img-fluid">
+            </picture>
+        </a>
+    </div>
+
 
 <!----------------Footer---------------------->
 
